[package]
name = "onewire_over_uart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#embedded-hal = "0.2"
#cortex-m = "0.7.7"

#[dependencies.stm32l4xx-hal]
#version = "0.7.1"
#features = ["rt", "stm32l431"]